[gd_scene load_steps=23 format=3 uid="uid://2rniuvsgoahs"]

[ext_resource type="Script" uid="uid://wdsxhyx781ee" path="res://Scenes/Enemies/bonbon_enemy.gd" id="1_3okub"]
[ext_resource type="Texture2D" uid="uid://cmno3g5i5r758" path="res://assets/Mini Pixel Pack 3/Mini Pixel Pack 3/Enemies/Bon_Bon (16 x 16).png" id="1_5etbq"]
[ext_resource type="Texture2D" uid="uid://cw36l5a3a0aw6" path="res://assets/Mini Pixel Pack 3/Mini Pixel Pack 3/Effects/Explosion (16 x 16).png" id="2_3okub"]
[ext_resource type="PackedScene" uid="uid://dgb7fvogi3ehj" path="res://Scenes/bullet_bon_enemy.tscn" id="2_qsacc"]
[ext_resource type="Script" uid="uid://duwmh345xxkwe" path="res://components/hitbox_enemy.gd" id="4_pku1b"]
[ext_resource type="Script" uid="uid://dqnw5qgrk2asj" path="res://components/hurtbox_enemy.gd" id="5_qsacc"]
[ext_resource type="AudioStream" uid="uid://b3gl1ktxoptdv" path="res://music/sound effcs/Bubble 1.wav" id="7_hxbmx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8k5fg"]
radius = 5.0
height = 10.0

[sub_resource type="Animation" id="Animation_goby7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5etbq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion(16X16):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion(16X16):texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3okub")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion(16X16):frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uv3jw"]
resource_name = "auch"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5etbq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45, 0.55, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0.239216, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion(16X16):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cyvcn"]
resource_name = "die"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5etbq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 3, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.399684, 0.549566),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0.239216, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion(16X16):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion(16X16):texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3okub")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion(16X16):frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.25, 0.3, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 0, 1, 2, 3, 4, 5]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.551983),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_56kgo"]
resource_name = "idle"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5etbq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45, 0.55, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion(16X16):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv3jw"]
_data = {
&"RESET": SubResource("Animation_goby7"),
&"auch": SubResource("Animation_uv3jw"),
&"die": SubResource("Animation_cyvcn"),
&"idle": SubResource("Animation_56kgo")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_goby7"]
animation = &"auch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cfmtx"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_56kgo"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_goby7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uv3jw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cyvcn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pku1b"]
states/auch/node = SubResource("AnimationNodeAnimation_goby7")
states/auch/position = Vector2(590, 189)
states/die/node = SubResource("AnimationNodeAnimation_cfmtx")
states/die/position = Vector2(590, 29)
states/idle/node = SubResource("AnimationNodeAnimation_56kgo")
states/idle/position = Vector2(403, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_goby7"), "idle", "auch", SubResource("AnimationNodeStateMachineTransition_uv3jw"), "auch", "idle", SubResource("AnimationNodeStateMachineTransition_cyvcn")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hxbmx"]
radius = 38.3675
height = 91.5408

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eeggk"]
radius = 19.0
height = 100.0

[node name="BonbonEnemy" type="CharacterBody2D"]
script = ExtResource("1_3okub")
bullet_enemy_scene = ExtResource("2_qsacc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4.5, 4.5)
texture = ExtResource("1_5etbq")
hframes = 4
metadata/_edit_lock_ = true

[node name="Explosion(16X16)" type="Sprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("2_3okub")
hframes = 6
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4, 2.42477)
shape = SubResource("CapsuleShape2D_8k5fg")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uv3jw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pku1b")
anim_player = NodePath("../AnimationPlayer")

[node name="HitboxEnemy" type="Area2D" parent="."]
scale = Vector2(1.16893, -1.21339)
collision_layer = 3
script = ExtResource("4_pku1b")
metadata/_custom_type_script = "uid://duwmh345xxkwe"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxEnemy"]
scale = Vector2(-0.807975, 0.371419)
shape = SubResource("CapsuleShape2D_hxbmx")
debug_color = Color(5.67943e-06, 0.650568, 0.0838803, 0.42)
metadata/_edit_lock_ = true

[node name="HurtboxEnemy" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 9
script = ExtResource("5_qsacc")
metadata/_custom_type_script = "uid://dqnw5qgrk2asj"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxEnemy"]
scale = Vector2(1.65926, -0.252659)
shape = SubResource("CapsuleShape2D_eeggk")
debug_color = Color(1, 0.0130725, 0.0103937, 0.42)
metadata/_edit_lock_ = true

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(0, 16)
metadata/_edit_lock_ = true

[node name="FireTimer" type="Timer" parent="."]

[node name="die_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_hxbmx")
bus = &"Die Enemies"
